--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class='screen'>
       
     </div>
-    <div class='input'>
-      <input type='text' name='prompt'>
-    </div>
+    <form class='input'>
+      <input class='promptField' type='text' name='promptField' value=''>
+      <input class='promptButton' type='submit' name='promptButton' value='>'>
+    </form>
   </main>
 </body>
 </html>
