Roughly styled the document

--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 <body>
   <main class='container'>
     <div class='screen'>
-      
+      <p>Welcome Robot. The following commands are available:</p>
+      <p>!calc (enter calc mode)</p>
+      <p>!note (enter note mode)</p>
+      <p>!game (enter game mode)</p>
+      <p>!exit (to exit the above modes)</p>
+      <p>!user (to change user)</p>
+      <p>!help (display this message)</p>
+      <p>> Entered menu mode</p>
+      <p>> Entered note mode</p>
+      <p>> Type !help for available commands</p>
+      <p>Hello Word</p>
+      <p>Hello</p>
+      <p>Hello World!</p>
+      <p>Hello World! I'm a Robot.</p>
+      <p>> Entered menu mode</p>
     </div>
     <form class='input'>
       <input class='promptField' type='text' name='promptField' value=''>
