Fixed scroll focus issue, developed script further

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <main class='container'>
-    <div class='screen'>
-      <p>Welcome Robot. The following commands are available:</p>
+    <section class='screen'>
+      <p>1 Welcome Robot. The following commands are available:</p>
       <p>!calc (enter calc mode)</p>
       <p>!note (enter note mode)</p>
       <p>!game (enter game mode)</p>
@@ -25,7 +25,7 @@
       <p>Hello World!</p>
       <p>Hello World! I'm a Robot.</p>
       <p>> Entered menu mode</p>
-    </div>
+    </section>
     <form class='input'>
       <input class='promptField' type='text' name='promptField' value=''>
       <input class='promptButton' type='submit' name='promptButton' value='>'>
