Implemented note mode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main class='container'>
     <section class='screen'>
-      <p>1 Welcome Robot. The following commands are available:</p>
+<!--  <p>1 Welcome Robot. The following commands are available:</p>
       <p>!calc (enter calc mode)</p>
       <p>!note (enter note mode)</p>
       <p>!game (enter game mode)</p>
@@ -24,7 +24,7 @@
       <p>Hello</p>
       <p>Hello World!</p>
       <p>Hello World! I'm a Robot.</p>
-      <p>> Entered menu mode</p>
+      <p>> Entered menu mode</p>  -->
     </section>
     <form class='input'>
       <input class='promptField' type='text' name='promptField' value=''>
