Fixed some issues and text

--- a/index.html
+++ b/index.html
@@ -10,21 +10,14 @@
 <body>
   <main class='container'>
     <section class='screen'>
-<!--  <p>1 Welcome Robot. The following commands are available:</p>
-      <p>!calc (enter calc mode)</p>
-      <p>!note (enter note mode)</p>
-      <p>!game (enter game mode)</p>
-      <p>!exit (to exit the above modes)</p>
-      <p>!user (to change user)</p>
-      <p>!help (display this message)</p>
-      <p>> Entered menu mode</p>
-      <p>> Entered note mode</p>
-      <p>> Type !help for available commands</p>
-      <p>Hello Word</p>
-      <p>Hello</p>
-      <p>Hello World!</p>
-      <p>Hello World! I'm a Robot.</p>
-      <p>> Entered menu mode</p>  -->
+      <p>Welcome! The following commands are available:<br>
+      !calc (enter calc mode)<br>
+      !note (enter note mode)<br>
+      !game (enter game mode)<br>
+      !exit (to exit the above modes)<br>
+      !reset (clear the console)<br>
+      !user (to change user)<br>
+      !help (display this message)</p>
     </section>
     <form class='input'>
       <input class='promptField' type='text' name='promptField' value=''>
