Further styled the document, minor fixes

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       !reset (clear the console)<br>
       !user (to change user)<br>
       !help (display this message)</p>
+      <p>> Entered menu mode</p>
     </section>
     <form class='input'>
-      <input class='promptField' type='text' name='promptField' value=''>
-      <input class='promptButton' type='submit' name='promptButton' value='>'>
+      <input class='promptField' type='text' name='promptField' value='' autofocus>
+      <input class='promptButton' type='submit' name='promptButton' value='&#9166;'>
     </form>
   </main>
 </body>
